# MLIR_MyDialect

./: CMakeLists.txt  README.md  a.out
examples/: basic.mlir
include/: CMakeLists.txt
include/my-mlir/Dialect/MyDialect/: CMakeLists.txt
include/my-mlir/Dialect/MyDialect/Conversion/: CMakeLists.txt  LowerToTarget.h  Passes.h
include/my-mlir/Dialect/MyDialect/IR/: CMakeLists.txt  MyDialect.td  MyDialectBase.td  MyDialectDialect.h  MyDialectOps.h  MyDialectOps.td  MyDialectTypes.h  MyDialectTypes.td
include/my-mlir/Dialect/MyDialect/Transforms/: CMakeLists.txt  ExampleTransform.h  GroupedPasses.h  MyDialectPasses.td  Passes.h  Patterns.h
lib/Dialect/MyDialect/Conversion/: CMakeLists.txt  LowerToTarget.cpp  Passes.cpp
lib/Dialect/MyDialect/IR/: CMakeLists.txt  MyDialectBase.cpp  MyDialectOps.cpp
lib/Dialect/MyDialect/Transforms/: CMakeLists.txt  ExampleTransform.cpp  GroupedPasses.cpp  MyTransform.cpp  Passes.cpp  Patterns.cpp
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in
test/conversion/: lower-to-target.mlir
test/dialect/: parse-print.mlir
test/transforms/: example-transform.mlir  my-transform.mlir
tools/: CMakeLists.txt
tools/my-mlir-opt/: CMakeLists.txt  my-mlir-opt.cpp
